# midiRebind

./: .gitignore  .gitmodules  README.md  TODO.md  config.py  gmaPy.py  main.py  midiRebind.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test.py  tox.ini  yamaha.txt
.github/workflows/: tests.yml
mapping/: GrandMA2.py  Yamaha.py  __init__.py  base.py  colorplay.py  keystrokes.py  mapping.py  midi.py  midiPageHandler.py  midipagehandler.py  miniDebug.py  panapulse.py  yamaha.txt
patch/: akailoop.ini  cl5.ini  default.ini  gma.ini  midi.ini  panapulse.ini  pulse.ini  pulsewin.ini  test.ini
src/: __init__.py
src/midiRebind/: __init__.py  gui.py
src/midiRebind/mapping/: GrandMA2.py  Yamaha.py  __init__.py  base.py  colorplay.py  keystrokes.py  midi.py  midiPageHandler.py  miniDebug.py  panapulse.py  utils.py  yamaha.txt
src/midiRebind/patch/: panapulse.ini  panapulsewin.ini  pulse.ini  test.ini
src/minitest/: README.md  __init__.py  minitest.py
src/panaremote/: .gitignore  README.md  TODO.md  gui.py  request.py
src/pythonAnalogWay/: CONNECT  DISCONNECT  README.md  bindings.py  datadump.txt  falseserver.py
tests/: basetst_midiRebind.py  test_bindings.py  test_midiRebind.py  test_panaremote.py
