[metadata]
name=midiRebind
description=A python midi rebinder
author=Dandaedre
license=GPLv3
licence_file=LICENCE
version = 0.0.1
platforms=unix,linux,osx,cygwin,win32
classifier =
    Programming Language :: Python :: 3

[options]
version=0.1a
packages=
    midiRebind
    midiRebind/panaremote
    midiRebind/pythonAnalogWay
install_requires=
    mido>=1.2.9
    python-rtmidi>=1.4.1
python_requires = >=3.8
package_dir=
    =src
zip_safe=no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
midiRebind=py.typed

[flake8]
max-line-length=160